examples/test/testpolicy5419.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy5419
  namespace: namespace22
spec:
  podSelector:
    matchLabels:
      key4: value19
      key23: value20
      key40: value5
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key17: value36
          key18: value27
          key44: value48
      podSelector:
        matchLabels:
          key7: value29
